force-app/main/default/objects/UserGroupVivoNet__mdt/UserGroupVivoNet__mdt.object-meta.xml
<CustomObject>
    <description>Metadado para armazenar o nome e o id de grupo de usuário.</description>
    <label>Grupo do Usuario VivoNet</label>
    <pluralLabel>Grupo dos Usuarios</pluralLabel>
</CustomObject>