force-app/main/default/objects/UserGroupVivoNet__mdt/fields/IdGroup__c.field-meta.xml
<CustomField>
    <fullName>IdGroup__c</fullName>
    <label>Id do Grupo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>