force-app/main/default/objects/UserGroupVivoNet__mdt/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <label>Id do Usuário</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>